<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
<<<<<<< HEAD
        <item
            android:id="@+id/navigation_home"
            android:icon="@drawable/ic_home"
            android:title="Home" />
        <item
            android:id="@+id/navigation_explore"
            android:icon="@drawable/ic_explore"
            android:title="Explore" />
        <item
            android:id="@+id/navigation_profile"
            android:icon="@drawable/ic_profile"
            android:title="Profile" />
=======

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_reservation"
        android:icon="@drawable/ic_reservation_black_24dp"
        android:title="@string/title_reservation" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications" />

>>>>>>> 8c06c27c3114e17849729444ce6dfeba24246d78
</menu>