<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.beteranos.ui_reservation.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >

        <action
            android:id="@+id/action_home_to_barber_profile"
            app:destination="@id/navigation_barber_profile" />
        <action
            android:id="@+id/action_home_to_gallery"
            app:destination="@id/navigation_gallery" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_products"
            app:destination="@id/navigation_products" />

    </fragment>

    <fragment
        android:id="@+id/navigation_products"
        android:name="com.example.beteranos.ui_reservation.home.products.ProductFragment"
        android:label="Products"
        tools:layout="@layout/fragment_product" />

    <fragment
        android:id="@+id/navigation_barber_profile"
        android:name="com.example.beteranos.ui_reservation.home.data_barber.BarberProfileFragment"
        android:label="Barber Profiles"
        tools:layout="@layout/fragment_barber_profile" />

    <fragment
        android:id="@+id/navigation_reservation"
        android:name="com.example.beteranos.ui_reservation.reservation.parent_fragments.ReservationFragment"
        android:label="@string/title_reservation"
        tools:layout="@layout/fragment_reservation" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.beteranos.ui_reservation.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_reviews"
        android:name="com.example.beteranos.ui_reservation.reviews.ReviewsFragment"
        android:label="@string/title_reviews"
        tools:layout="@layout/fragment_reviews" >
        <action
            android:id="@+id/action_navigation_reviews_to_navigation_customer_login"
            app:destination="@id/navigation_customer_login" />
    </fragment>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.beteranos.ui_reservation.home.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" >
        <action
            android:id="@+id/action_navigation_notifications_to_navigation_customer_login"
            app:destination="@id/navigation_customer_login" />
    </fragment>

    <fragment
        android:id="@+id/navigation_gallery"
        android:name="com.example.beteranos.ui_reservation.home.Gallery.GalleryFragment"
        android:label="@string/title_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.beteranos.ui_reservation.profile.CustomerProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_customer_profile" />

    <activity
        android:id="@+id/navigation_customer_login"
        android:name="com.example.beteranos.ui_customer_login.CustomerLoginActivity"
        android:label="@string/title_customer_login"
        tools:layout="@layout/activity_customer_login" />

</navigation>